--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      <!-- Data Tables -->
      <script src="public/vendor/datatables/dataTables.min.js"></script>
      <script src="public/vendor/datatables/dataTables.bootstrap.min.js"></script>
-     <script src="public/vendor/datatables/custom/custom-datatables.js"></script>
+     <!-- <script src="public/vendor/datatables/custom/custom-datatables.js"></script> -->
      <!-- DataTable Buttons -->
      <script src="public/vendor/datatables/buttons/dataTables.buttons.min.js"></script>
      <script src="public/vendor/datatables/buttons/jszip.min.js"></script>
